- added card to layout of tweet-stream - fixed alignment of cards

--- a/src/app/tweet-stream/tweet-stream.component.css
+++ b/src/app/tweet-stream/tweet-stream.component.css
@@ -1,6 +1,10 @@
 li{
-    text-align: center;
+    padding-bottom: 20px;
 }
 a{
     text-decoration: none;
+}
+.header{
+    background-color: azure;
+ 
 }
